--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,8 @@
         <title>Sample Project</title>
     </head>
     <body>
+        <button id="saveButton">SAVE</button>
+        <button id="exportButton">EXPORT</button>
         <input type="file" id="filepicker" name="fileList" webkitdirectory multiple />
         <ul id="listing"></ul>
         <script src="/output/bundle.js"></script>
