--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,14 @@
     <head>
         <meta charset="UTF-8">
         <title>Sample Project</title>
+	    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.12/semantic.min.css">        
     </head>
     <body>
         <button id="saveButton">SAVE</button>
         <button id="exportButton">EXPORT</button>
         <input type="file" id="filepicker" name="fileList" webkitdirectory multiple />
         <ul id="listing"></ul>
+        <div id="ControllerView"></div>
         <script src="/output/bundle.js"></script>
     </body>
 </html>
